# rayfork-sokol-template

./: .gitignore  CMakeLists.txt  README.md
libs/rayfork/: rayfork.c  rayfork.h
source/: game.c  game.h  main.c  platform.h
src/: game.c  platform.c  platform.h
